@@ -2,6 +2,7 @@
 
 	* Removed obsolete code.
 	* Minor fix with margins.
+	* Shift click extends selection.
 
 2004-03-18  ujwal
 
